--- a/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
@@ -74,17 +74,17 @@ Wykresy zależności czasu wykonywania względem liczby samochodów na skrzyżow
 Wykresy zależności liczby kroków czasowych, po których wszystkie samochody opuszczą skrzyżowania pokazują, że liczba kroków czasowych rośnie liniowo względem liczby pojazdów. 
 \newline
 \indent
-Liczba kroków czasowych na skrzyżowaniu ośmiu dróg jest mniejsza niż na skrzyżowaniu czterech dróg. Spowodowane jest to tym, że na skrzyżowaniu czterech dróg auta stoją jedno za drugim na pasach, bez wolnej przestrzeni przed sobą. W porównaniu do skrzyżowaniu ośmiu dróg, auta mogą swobodnie poruszać się na pasie i częściej wymijają kolizję na skrzyżowaniu.
+Liczba kroków czasowych na skrzyżowaniu ośmiu dróg jest mniejsza niż na skrzyżowaniu czterech dróg. Spowodowane jest to tym, że na skrzyżowaniu czterech dróg auta stoją jedno za drugim na pasach, bez wolnej przestrzeni przed sobą. W porównaniu do skrzyżowania ośmiu dróg auta mogą swobodnie poruszać się na pasie i częściej wymijają kolizję na skrzyżowaniu.
 
 \section{Prawdopodobieństwo kolizji}
 
-W celu przetestowania bezpieczeństwa rozwiązania, zostały przeprowadzone pomiary prawdopodobieństwa kolizji w przypadku pomyłek pojazdów. Pomyłka polega na niezastosowaniu się pojazdu do planu. W rozwiązaniu zaimplementowane zostało symulowanie kolizji pojazdów z określonym prawdopodobieństwem. W każdym kroku czasowym, każdy z pojazdów myli się z podanym wcześniej prawdopodobieństwem. Wynikiem pomiarów jest zależność prawdopodobieństwa kolizji od prawdopodobieństwa pomyłki. Zmierzone zostało prawdopodobieństwo kolizji w razie pomyłek pojazdów z następującymi prawdopodobieństwami \{0.001, 0.005, 0.01\}
+W celu przetestowania bezpieczeństwa rozwiązania zostały przeprowadzone pomiary prawdopodobieństwa kolizji w przypadku pomyłek pojazdów. Pomyłka polega na niezastosowaniu się pojazdu do planu. W rozwiązaniu zaimplementowane zostało symulowanie kolizji pojazdów z określonym prawdopodobieństwem. W każdym kroku czasowym każdy z pojazdów myli się z podanym wcześniej prawdopodobieństwem. Wynikiem pomiarów jest zależność prawdopodobieństwa kolizji od prawdopodobieństwa pomyłki. Zmierzone zostało prawdopodobieństwo kolizji w razie pomyłek pojazdów z następującymi prawdopodobieństwami \{0.001, 0.005, 0.01\}
 \newline
 \indent
-W obliczeniach pod uwagę wzięty został także parametr bezpieczeństwa. Pomiary zostały wykonane dla skrzyżowania 8 dróg, na których znajdowało się 10 pojazdów. Program uruchomiony został 30 razy dla parametru bezpieczeństwa równego 0 oraz 30 razy dla parametru bezpieczeństwa równego 1, aby pokazać jakie bezpieczeństwo gwarantuje użycie tego parametru.
+W obliczeniach pod uwagę wzięty został także parametr bezpieczeństwa. Pomiary zostały wykonane dla skrzyżowania 8 dróg, na których znajdowało się 10 pojazdów. Program uruchomiony został 30 razy dla parametru bezpieczeństwa równego 0 oraz 30 razy dla parametru bezpieczeństwa równego 1, aby pokazać, jakie bezpieczeństwo gwarantuje użycie tego parametru.
 \newline
 \newline
-Wyniki z parametrem bezpieczeństwa równym 0 zareprezentowane są w tabeli \ref{firstCollision}
+Wyniki z parametrem bezpieczeństwa równym 0 zaprezentowane są w tabeli \ref{firstCollision}
 \begin{table}[H]
     \centering
     \begin{tabular}{|c|c|c|c|}
@@ -98,7 +98,7 @@ Wyniki z parametrem bezpieczeństwa równym 0 zareprezentowane są w tabeli \ref
     \label{firstCollision}
 \end{table}
 \noindent
-Wyniki z parametrem bezpieczeństwa równym 1 zareprezentowane są w tabeli \ref{secondCollision}
+Wyniki z parametrem bezpieczeństwa równym 1 zaprezentowane są w tabeli \ref{secondCollision}
 \begin{table}[H]
     \centering
     \begin{tabular}{|c|c|c|c|}
@@ -111,14 +111,14 @@ Wyniki z parametrem bezpieczeństwa równym 1 zareprezentowane są w tabeli \ref
     \caption{Prawdopodobieństwo kolizji z parametrem bezpieczeństwa równym 0}
     \label{secondCollision}
 \end{table}
-Jak pokazują wyniki w tabelach \ref{firstCollision}, \ref{secondCollision} parametr bezpieczeństwa niweluje prawdopodobieństwo kolizji dla małych prawdopodobieństw (0.001, 0.005) pomyłki do zera. Dla prawdopodobieństwa pomyłki równego 0.01, parametr bezpieczeństwa nie zapobiega całkowicie kolizjom - w przeprowadzonych badaniach zmniejszył je o 30\%.
+Jak pokazują wyniki w tabelach \ref{firstCollision}, \ref{secondCollision} parametr bezpieczeństwa niweluje prawdopodobieństwo kolizji dla małych prawdopodobieństw (0.001, 0.005) pomyłki do zera. Dla prawdopodobieństwa pomyłki równego 0.01 parametr bezpieczeństwa nie zapobiega całkowicie kolizjom - w przeprowadzonych badaniach zmniejszył je o 30\%.
 
 \section{Porównanie wyników z rozwiązaniem ze światłami drogowymi}
 
-W celu zweryfikowania szybkości podejścia z wykorzystaniem algorytmu A*, wyniki zostały porównane z rozwiązaniem polegającym na optymalizacji świateł drogowych przedstawionym w pracy \cite{slakomy}. Porównywane rozwiązanie także jest oparte o kroki czasowe. Drogi także są dyskretne, mierzone w odcinkach, a prędkość też mierzona jest w ilości odcinków drogi na krok czasowy.
+W celu zweryfikowania szybkości podejścia z wykorzystaniem algorytmu A* wyniki zostały porównane z rozwiązaniem polegającym na optymalizacji świateł drogowych przedstawionym w pracy \cite{slakomy}. Porównywane rozwiązanie także jest oparte o kroki czasowe. Drogi także są dyskretne, mierzone w odcinkach, a prędkość też mierzona jest w ilości odcinków drogi na krok czasowy.
 \newline
 \indent
-Rozwiązania różnią się modelami danych, które reprezentują skrzyżowania oraz znajdujące się na nich pojazdy. W jednym rozwiązaniu położenie i droga aut jest określona za pomocą grafu oraz wierzchołków grafu, przez które auta będą przechodzić. W opisywanym w tej pracy, rozwiązaniu drogi są opisywane poprzez ich rozmiar oraz przecięcia z innymi drogami. Położenia samochodów natomiast poprzez numer drogi oraz numer odcinka drogi na której się znajdują.
+Rozwiązania różnią się modelami danych, które reprezentują skrzyżowania oraz znajdujące się na nich pojazdy. W jednym rozwiązaniu położenie i droga aut jest określona za pomocą grafu oraz wierzchołków grafu, przez które auta będą przechodzić. W opisywanym w tej pracy, rozwiązaniu drogi są opisywane poprzez ich rozmiar oraz przecięcia z innymi drogami. Położenia samochodów natomiast poprzez numer drogi oraz numer odcinka drogi, na której się znajdują.
 \newline
 \indent
 Wykonując pomiary, uzgodnione zostały wspólne warunki w obu rozwiązaniach tak, aby można było je porównać. Porównywane są kroki czasowe, po których wszystkie auta opuszczą skrzyżowanie. Wspólne warunki są następujące:
